correct project section spacing

--- a/app/assets/stylesheets/components/section.scss
+++ b/app/assets/stylesheets/components/section.scss
@@ -41,7 +41,7 @@ section {
     display: flex;
     align-items: center;
     margin: 72px 0px;
-    height: 40vh;
+    height: 60vh;
     .project-info{
       margin: 0px 24px;
       width: 30vw;
